test_regress/t/t_property_var_unsup.out
%Error-UNSUPPORTED: t/t_property_var_unsup.v:23:30: Unsupported: property variable default value
   23 |   property with_def(int nine = 9);
      |                              ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
